// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`app/TabSelectorMenu should not render when the profile does not contain any page data 1`] = `
<body>
  <div>
    <nav
      class="react-contextmenu TabSelectorMenu"
      role="menu"
      style="position: fixed; opacity: 0; pointer-events: none;"
      tabindex="-1"
    >
      <div />
    </nav>
  </div>
</body>
`;

exports[`app/TabSelectorMenu should render properly 1`] = `
<body>
  <div>
    <nav
      class="react-contextmenu TabSelectorMenu"
      role="menu"
      style="position: fixed; opacity: 0; pointer-events: none;"
      tabindex="-1"
    >
      <div
        aria-checked="false"
        aria-disabled="false"
        class="react-contextmenu-item tabSelectorMenuItem checkable checked"
        role="menuitem"
        tabindex="-1"
      >
        All tabs and windows
      </div>
      <div
        aria-checked="true"
        aria-disabled="false"
        class="react-contextmenu-item tabSelectorMenuItem checkable"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="nodeIcon "
        />
        profiler.firefox.com
      </div>
      <div
        aria-checked="true"
        aria-disabled="false"
        class="react-contextmenu-item tabSelectorMenuItem checkable"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="nodeIcon "
        />
        mozilla.org
      </div>
    </nav>
  </div>
</body>
`;

exports[`app/TabSelectorMenu should render sanitized page urls correctly 1`] = `
<body>
  <div>
    <nav
      class="react-contextmenu TabSelectorMenu"
      role="menu"
      style="position: fixed; opacity: 0; pointer-events: none;"
      tabindex="-1"
    >
      <div
        aria-checked="false"
        aria-disabled="false"
        class="react-contextmenu-item tabSelectorMenuItem checkable checked"
        role="menuitem"
        tabindex="-1"
      >
        All tabs and windows
      </div>
      <div
        aria-checked="true"
        aria-disabled="false"
        class="react-contextmenu-item tabSelectorMenuItem checkable"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="nodeIcon "
        />
        moz-extension://&lt;Page #4&gt;
      </div>
      <div
        aria-checked="true"
        aria-disabled="false"
        class="react-contextmenu-item tabSelectorMenuItem checkable"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="nodeIcon "
        />
        https://&lt;Page #3&gt;
      </div>
    </nav>
  </div>
</body>
`;
